# EQNeMix

./: .gitignore  __init__.py  setup.cfg  setup.py
.ipynb_checkpoints/: setup-checkpoint.cfg
EQNEMIX/: __init__.py  main.py
EQNEMIX/.ipynb_checkpoints/: __init__-checkpoint.py  main-checkpoint.py
docs/: NeuralNetwork.rst  conf.py  eqnemix.rst  index.rst  modules.rst  setup.rst
docs/source/: conf.py  index.rst
eqnemix/: __init__.py  main.py
eqnemix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eqnemix_temp/: __init__.py
examples/: eqnegrid_csl.ipynb  eqnemaster.ipynb  extent.dbf  extent.shp  extent.shx  picking_eqt.ipynb
tests/: test_main.py
