[metadata]
name = EQnMIX
version = 0.1.0
description = A package for seismic data processing and analysis
author = Tu Nombre
author_email = tu_email@example.com
license = MIT
url = https://github.com/tu_usuario/EQnMIX

[options]
packages = find:
install_requires =
    numpy
    pandas
    obspy
python_requires = >=3.7
